unpackaged/main/default/objects/ABA_File_Trailer__c/ABA_File_Trailer__c.object-meta.xml
<CustomObject>
    <label>ABA File Trailer</label>
    <nameField>
        <displayFormat>AFT-{0000}</displayFormat>
        <label>ABAFile Trailer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABA File Trailers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>