unpackaged/main/default/objects/ABA_File_Trailer__c/fields/Blank_Placeholder_2__c.field-meta.xml
<CustomField>
    <fullName>Blank_Placeholder_2__c</fullName>
    <description>Must be blank filled.</description>
    <inlineHelpText>Must be blank filled.</inlineHelpText>
    <label>Blank Placeholder 2</label>
    <length>24</length>
    <type>Text</type>
</CustomField>