unpackaged/main/default/objects/ABA_File_Trailer__c/fields/Blank_Placeholder_3__c.field-meta.xml
<CustomField>
    <fullName>Blank_Placeholder_3__c</fullName>
    <description>Must be blank filled.</description>
    <inlineHelpText>Must be blank filled.</inlineHelpText>
    <label>Blank Placeholder 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>