unpackaged/main/default/objects/ABA_File_Trailer__c/fields/BSB_Format_Filler__c.field-meta.xml
<CustomField>
    <fullName>BSB_Format_Filler__c</fullName>
    <description>Must be '999-999'</description>
    <inlineHelpText>Must be '999-999'</inlineHelpText>
    <label>BSB Format Filler</label>
    <length>7</length>
    <type>Text</type>
</CustomField>