unpackaged/main/default/objects/ABA_File_Trailer__c/fields/Count_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Records__c</fullName>
    <description>Numeric only valid. Must equal accumulated number of Record
Type 1 items on the file. Right justified, zero filled.</description>
    <inlineHelpText>Numeric only valid. Must equal accumulated number of Record
Type 1 items on the file. Right justified, zero filled.</inlineHelpText>
    <label>Count of Records</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>