unpackaged/main/default/objects/ABA_File_Trailer__c/fields/Debit_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debit_Total_Amount__c</fullName>
    <description>Numeric only valid. Must equal the accumulated total of debit
Detail Record amounts. Show in cents without punctuation. Right
justified, zero filled. Unsigned.</description>
    <inlineHelpText>Numeric only valid. Must equal the accumulated total of debit
Detail Record amounts. Show in cents without punctuation. Right
justified, zero filled. Unsigned.</inlineHelpText>
    <label>Debit Total Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>