unpackaged/main/default/objects/ABA_File_Trailer__c/fields/Net_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Amount__c</fullName>
    <description>Numeric only valid. Must equal the difference between File Credit
&amp; File Debit Total Amounts. Show in cents without punctuation.
Right justified, zero filled. Unsigned.</description>
    <inlineHelpText>Numeric only valid. Must equal the difference between File Credit
&amp; File Debit Total Amounts. Show in cents without punctuation.
Right justified, zero filled. Unsigned.</inlineHelpText>
    <label>Net Total Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>